@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-06-04T00:56:36Z",
+  "timestamp" : "2024-06-15T00:56:52Z",
   "count_outdated" : 490,
   "uniques_outdated" : 317,
-  "count" : 491,
-  "uniques" : 318,
+  "count" : 492,
+  "uniques" : 319,
   "clones" : [
     {
       "timestamp": "2024-06-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-06-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
